# calimove

./: .env.example  .gitignore  .npmrc  .oxfmtrc.json  CLAUDE.md  eslint.config.ts  index.html  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  research.md  tsconfig.app.json  vite.config.ts
backend/: Dockerfile  alembic.ini  calimove-mobility.sqlite  pyproject.toml  requirements-scrape.txt  requirements.txt
backend/alembic/: env.py
backend/alembic-scrape/: env.py
backend/alembic-scrape/versions/: 1872764b4340_setup_scrape_database.py
backend/alembic/versions/: bf323ca06a5f_setup_main_database.py
backend/calimove/: app.py  db.py  models.py  schemas.py
backend/data/: calimove-mobility.sqlite
backend/rawdata/: calimove-mobility.sqlite
backend/rawdata/html/: curriculum.html  lecture_41611713.html  lecture_41611714.html  lecture_41611715.html  lecture_41611717.html  lecture_41611719.html  lecture_41611720.html  lecture_41611721.html  lecture_41611722.html  lecture_41634859.html  lecture_41634860.html  lecture_41634861.html  lecture_41634995.html  lecture_41634996.html  lecture_41634997.html  lecture_41634998.html  lecture_41634999.html  lecture_41646588.html  lecture_41646589.html  lecture_41646590.html  lecture_41646591.html  lecture_41646592.html  lecture_41646593.html  lecture_41646594.html  lecture_41646595.html  (+82 more)
backend/scrape/: 1_scrape.py  2_parse-images.py  3_create-production-data.py  db.py  models.py  schemas.py  scrape_curriculum.py  scrape_utils.py  scrape_workout.py
backend/tests/: context.py  test_app.py
(+76 files in other folders)
