[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maximilian Girlich <maximilian.girlich@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.3"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"


[tool.poetry.group.scrape.dependencies]
bs4 = "^0.0.2"
requests = "^2.31.0"
pydantic-settings = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
